--- a/config.json
+++ b/config.json
@@ -1,23 +1,1 @@
-{
-    "Width":1000,
-    "Height":600,
-    "Font_Name":"Arial",
-    "Sx":10,
-    "Sy":10,
-    "Cell_Width":55,
-    "Cell_Height":55,
-    "Bomb_Count":20,
-    "Bomb_Color": [255, 0, 0],
-    "Flagged_Color": [0, 150, 0],
-    "Hidden_Color": [255, 255, 255],
-    "Revealed_Color": [200, 175, 225],
-    "Foreground": [0, 0, 0],
-    "Background": [255, 255, 255],
-    "Win_Color": [0, 100, 255],
-    "Lose_Color": [255, 0, 0],
-    "Font_Size": 25,
-    "Name": "Unnamed",
-    "Bomb": 250,
-    "Flag": 100,
-    "Safe": 50
-}
+{"Width": 800, "Height": 600, "Font_Name": "Arial", "Sx": 10, "Sy": 10, "Cell_Width": 55, "Cell_Height": 55, "Bomb_Count": 10, "Bomb_Color": [255, 0, 0], "Flagged_Color": [0, 150, 0], "Hidden_Color": [255, 255, 255], "Revealed_Color": [200, 175, 225], "Foreground": [0, 0, 0], "Background": [255, 255, 255], "Win_Color": [0, 100, 255], "Lose_Color": [255, 0, 0], "Font_Size": 25, "Name": "Alireza", "Bomb": 250, "Flag": 100, "Safe": 50, "Ip": "localhost", "Port": 1234}
